# cost-aware-architecture

./: Cargo.toml  Makefile  README.md  tf-kiwi-cne-proda-shop-service-cne-prd-us-west-2-output.csv  tf-phoenix-proda-shop-service-wae-prd-us-west-2-output.csv
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: main.rs  report_manager.rs
src/config/: account_report.json  iam_policy.json  query.json  report.json
src/util/: calculator.rs  cost_explorer_client.rs  csv_writer.rs  metric_client.rs  mod.rs  opensearch_client.rs  report_config.rs  s3_client.rs  stop_watch.rs
