[package]
name = "cost-aware-arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-cloudwatch = "1.17.0"
aws-sdk-costexplorer = "1.16.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
types = "0.1.2"
aws-sdk-s3 = "1.17.0"
serde = "1.0.197"
serde_json = "1.0.114"
aws-smithy-types = "1.1.8"
chrono = "0.4.35"
