[package]
name = "cost-aware-arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-cloudwatch = "1.58.0"
aws-sdk-costexplorer = "1.59.0"
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1.68.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
aws-smithy-types = "1.2.11"
chrono = "0.4.39"
csv = "1.3.1"
bytestream = "0.4.1"
clap = { version = "4.5.26", features = ["derive"] }
futures = "0.3.31"
opensearch = "2.3.0"
reqwest = "0.12.12"
